logs/quintagroup.captcha.core.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/quintagroup'...
Listing './lib/python3.5/site-packages/quintagroup/captcha'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/Extensions'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/data'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/data/fonts'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/data/fonts/vera'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/cs'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/da'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/de'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/en'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/es'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/fr'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/it'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/ja'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/pl'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/pl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/pt_BR'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/sv'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/uk'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/locales/uk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/profiles'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/profiles/default'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/profiles/uninstall'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/skins'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/dynamic'...
Compiling './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/dynamic/getCaptcha.py'...
***   File "./lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/dynamic/getCaptcha.py", line 17
    return encrypted_key
                       ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/dynamic/getCaptchaImage.py'...
***   File "./lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/dynamic/getCaptchaImage.py", line 41
    return im['src']
                   ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/getCaptchaType.py'...
***   File "./lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/getCaptchaType.py", line 21
    return 'static'
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/static'...
Compiling './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/static/getCaptcha.py'...
***   File "./lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/static/getCaptcha.py", line 15
    return encrypted_key
                       ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/static/getCaptchaImage.py'...
***   File "./lib/python3.5/site-packages/quintagroup/captcha/core/skins/captcha_core/static/getCaptchaImage.py", line 15
    return
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/quintagroup/captcha/core/skins/captchas'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/tests'...
Listing './lib/python3.5/site-packages/quintagroup/captcha/core/tests/test_captcha'...
Listing './lib/python3.5/site-packages/quintagroup.captcha.core-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
